stigs/network/cnp-mysql-stig-v235146-block-unused-ports.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-block-unused-ports
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      app: mysql      #change app: mysql to match your label
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
