stigs/network/cnp-stigs-postgresql-port-external-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-stigs-postgresql-port-external-access
  namespace: default        #change default namespace to match your namespace
spec:
  description: "This will Block PostgreSQL External Access"
  endpointSelector:
    matchLabels:
      pod: testpod   #change this label with your label
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16    #change with your ip address
      toPorts:
        - ports:
            - port: "5432"
